# CRMB-M1

./: AGENT_CREATION_GUIDE.md
crmb-streaming-webapp/: .env.example  .eslintrc.cjs  .gitignore  ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  streaming_interface.html  tsconfig.json  vite.config.ts
crmb-streaming-webapp/backend/: Cargo.toml
crmb-streaming-webapp/backend/src/: config.rs  database.rs  error.rs  main.rs
crmb-streaming-webapp/backend/src/handlers/: auth.rs  enhanced_metadata.rs  health.rs  mod.rs  movies.rs  stremio.rs  stremio_mdblist.rs  tmdb.rs  tv.rs  user.rs
crmb-streaming-webapp/backend/src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  rate_limit.rs  request_id.rs  security.rs
crmb-streaming-webapp/backend/src/models/: api.rs  auth.rs  mdblist.rs  mod.rs  stremio.rs  tmdb.rs  user.rs
crmb-streaming-webapp/backend/src/services/: auth.rs  cache.rs  enhanced_metadata.rs  mdblist.rs  mod.rs  rate_limiter.rs  stremio.rs  tmdb.rs
crmb-streaming-webapp/backend/src/utils/: error.rs  mod.rs  response.rs  validation.rs
crmb-streaming-webapp/src/: App.css  App.tsx  vite-env.d.ts
crmb-streaming-webapp/src/hooks/: useAuth.tsx  useContentCatalog.ts  useHeroBanner.ts  useSearch.ts
crmb-streaming-webapp/src/services/: dataTransform.ts  tmdb.ts
crmb-streaming-webapp/src/styles/: App.css  global.css  index.css
crmb-streaming-webapp/src/types/: index.ts
crmb-streaming/backend/: .env  Cargo.toml
crmb-streaming/backend/src/: main.rs
crmb-streaming/backend/src/handlers/: movies.rs
crmb-streaming/backend/src/middleware/: rate_limit.rs
crmb-streaming/backend/src/models/: movie.rs
crmb-streaming/backend/src/services/: mod.rs  rate_limiter.rs  tmdb.rs
crmb-streaming/frontend/: .env
trae/: AGENT_QUICK_REFERENCE.md  HOW_TO_USE_AGENTS_IN_TRAE.md  automated_fullstack_team_config.md  complete_trae_ai_config.json  integrations.txt  trae_agent_team_config latest.md
trae/agents/: 01_project_architect_agent.json  02_frontend_core_agent.json  03_design_system_agent.json  04_backend_api_agent.json  05_state_management_agent.json  06_performance_testing_agent.json  07_devops_deployment_agent.json  08_quality_assurance_agent.json  AGENT_PROMPTS.md  AGENT_TASK_PLANS.md  EXACT_AGENT_PROMPTS.md
(+48 files in other folders)
